chore: Unify jvmArguments for all kotlin targets