@@ -1,4 +1,4 @@
-import common.addModules
+import common.jvmArguments
 import common.mppTargetName
 
 plugins {
@@ -10,20 +10,13 @@ description = "Ktor backend application"
 
 application {
   mainClass = "AppKt"
-  applicationDefaultJvmArgs +=
-      listOf(
-          "--show-version",
-          "--enable-preview",
-          "--add-modules=$addModules",
-          "--enable-native-access=ALL-UNNAMED",
-      )
+  applicationDefaultJvmArgs += jvmArguments()
 }
 
 mppTargetName = "jvm"
 
 dependencies {
   implementation(projects.common)
-
   // Specify the classifier using variantOf
   // implementation(variantOf(libs.lwjgl.opengl) { classifier("natives-linux") })
 }
